--- a/src/index.css
+++ b/src/index.css
@@ -54,8 +54,13 @@ textarea:focus{
   justify-content: space-between;
 }
 
+
 .notes-list{
   display:grid;
   grid-gap: 1rem;
   grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
+}
+
+.delete-icon {
+  cursor: pointer;
 }
