header and dark mode added

--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,29 @@ code {
     monospace;
 }
 
+.header {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+}
+
+.dark-mode {
+	background-color: black;
+}
+
+.dark-mode h1 {
+	color: white;
+}
+
+.container {
+	max-width: 960px;
+	margin-right: auto;
+	margin-left: auto;
+	padding-right: 15px;
+	padding-left: 15px;
+	min-height: 100vh;
+}
+
 .note{
   background-color: #d4e7fd;
   border-radius: 10px;
